--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   ],
   "main": "dist/index.js",
   "scripts": {
-    "dev": "nodemon -w src --exec npm run build",
-    "build": "rollup -c rollup.config.js",
+    "dev": "tsc -w",
+    "build": "rm -rf dist && tsc",
     "prepare": "install-peers",
     "test": "ava"
   },
@@ -29,18 +29,14 @@
   },
   "homepage": "https://github.com/undoZen/immer-rxjs#readme",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^11.0.2",
-    "@rollup/plugin-node-resolve": "^7.1.1",
     "ava": "^3.5.1",
     "install-peers-cli": "^2.2.0",
     "nodemon": "^2.0.3",
-    "rollup": "^2.1.0"
+    "typescript": "^3.8.3"
   },
   "peerDependencies": {
     "immer": "^6",
     "rxjs": "^6"
   },
-  "dependencies": {
-    "is-primitive": "^3.0.1"
-  }
+  "dependencies": {}
 }
