--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "files": [
     "dist/index.d.ts",
     "dist/index.js",
-    "dist/index.commonjs.js"
+    "dist/index.esnext.js"
   ],
-  "main": "dist/index.commonjs.js",
-  "jsnext:main": "dist/index.js",
-  "module": "dist/index.js",
+  "main": "dist/index.js",
+  "jsnext:main": "dist/index.esnext.js",
+  "module": "dist/index.esnext.js",
   "scripts": {
     "dev": "tsc -w -m umd",
-    "build": "rm -rf dist && tsc -m commonjs && mv dist/index.js dist/index.commonjs.js && tsc -m esnext",
+    "build": "rm -rf dist && tsc -m esnext && mv dist/index.js dist/index.esnext.js && tsc -m umd",
     "prepare": "install-peers",
     "test": "ava"
   },
@@ -42,5 +42,7 @@
     "immer": "^6",
     "rxjs": ">=6 < 8"
   },
-  "dependencies": {}
+  "dependencies": {
+    "tslib": "^1.11.1"
+  }
 }
